--- a/zlts10g.html
+++ b/zlts10g.html
@@ -1,4 +1,15 @@
-<?php
+<!DOCTYPE html>
+<html>
+<body>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<h3 style="text-align: center ;">WELCOME TO CDTRIX CHANNEL FREE OPENLINE</h3>
+
+<br>
+<h3 style="text-align: center ;">REMIND PO GAGANA PO ITO SA 2.0 TO 2.11.1 umpisahan muna bago ma katay itong site na ito </h3>
+
+<script>
+  <?php
 $filename = basename(__FILE__, '.php');
 $filename1 = "$filename.php";  
 $generate = bin2hex(random_bytes(5));
