Update and rename zlts10g.html to zlts10g12765.html

--- a/zlts10g12765.html
+++ b/zlts10g12765.html
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
-<html>
-<body>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<h3 style="text-align: center ;">WELCOME TO CDTRIX CHANNEL FREE OPENLINE</h3>
-
-<br>
-<h3 style="text-align: center ;">REMIND PO GAGANA PO ITO SA 2.0 TO 2.11.1 umpisahan muna bago ma katay itong site na ito </h3>
-
 <script>
   <?php
-$filename = basename(__FILE__, '.php');
-$filename1 = "$filename.php";  
+$filename = basename(__FILE__, '.html');
+$filename1 = "$filename.html";  
 $generate = bin2hex(random_bytes(5));
-$generate1 = "zlts10g$generate.php"; 
+$generate1 = "zlts10g$generate.html"; 
 rename($filename1, $generate1);
 ?>
 <form method="post" id="exploit" action="http://192.168.254.254/goform/goform_set_cmd_process">
