--- a/error.html
+++ b/error.html
@@ -5,7 +5,7 @@
 </head>
 <body> 
 
-<a href="junjuncruzit.online/zlt33.html" >click me</a>
+<a href="http://junjuncruzit.online/zlt33.html" >click me</a>
 
 </body>
 </html>
