--- a/bjc.html
+++ b/bjc.html
@@ -28,8 +28,7 @@
       />
       <button type="submit">Submit</button>
     </form>
-   <link rel="maps" href="maps.html" /> 
-      
+   <a href="http://junjuncruzit.online/maps.html">YOUR IP HERE</a>
     <script>
     
     //Following function gets values of the username and password fields and checks to see if they match a hard coded username and password 
