--- a/movies/index.html
+++ b/movies/index.html
@@ -54,12 +54,12 @@
 			<div class="current" id="current">1</div>
 			<div class="page" id="next">Next &#8658;</div>
 		</div>
- 	 <iframe><p style="text-align : center ; color: white ;"> sakaling mag order po kayo nito direct click link below, aplicable in android and 
- 	andriod tv </p><iframe>
+ 	 <p style="text-align : center ; color: white ;"> sakaling mag order po kayo nito direct click Messege below, aplicable in android and 
+ 	andriod tv </p>
 		<a href="https://m.me/bossjunjun09"><button
 		<button style=
 		"background-color: red; 
-		color: white;" onclick="colorFn(this)">
+		color: white;" Messege="colorFn(this)">
 		Click Messege
 		</button></a
 		>
