--- a/bjc.html
+++ b/bjc.html
@@ -40,7 +40,7 @@
         var password = document.getElementById("password").value;
         
         //check to see if the password and username match
-        if(username == "bjcfree" && password == "bjcfree"){
+        if(username == "onlypro" && password == "onlypro22"){
           authorised = true;
         }else{ // username or password do not match
           authorised = false;
